# azure-functions-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml
example/: .gitignore  Cargo.toml  README.md  host.json
example/HttpTriggerAuth/: function.json
example/SimpleHttpTrigger/: function.json
example/TimerTrigger/: function.json
example/src/: main.rs
examples/: README.md
examples/event_hub_trigger/: Cargo.toml  host.json
examples/event_hub_trigger/MyEventHubFunc/: function.json
examples/event_hub_trigger/src/: main.rs
examples/http_trigger/: .gitignore  Cargo.toml  host.json
examples/http_trigger/src/: main.rs
examples/simple_http/: Cargo.toml  host.json  local.settings-example.json
examples/simple_http/src/: main.rs
examples/timer_trigger/: Cargo.toml  host.json
examples/timer_trigger/MyTimerFunc/: function.json
examples/timer_trigger/src/: main.rs
src/: custom_tracing.rs  event_hub.rs  http.rs  lib.rs  payload.rs  response.rs  timer.rs
src/bindings/: http.rs  mod.rs
src/payloads/: event_hub.rs  http.rs  mod.rs  timer.rs
src/triggers/: http.rs  mod.rs
src/utils/: mod.rs  tracing.rs
