[package]
name = "azure_functions"
version = "0.1.0"
authors = ["Daniel Larsen"]
description = "Azure Functions handler in Rust"
repository = "https://github.com/daniel-larsen/azure-functions-rust"
homepage = "https://github.com/daniel-larsen/azure-functions-rust"
keywords = ["azure", "sdk", "functions"]
categories = ["api-bindings"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http2", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2.3", features = ["serde"] }
time = { version = "0.3", features = ["serde-human-readable"]}
log = "0.4"